adding tragedy post

--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -67,7 +67,8 @@
       <!-- <div layout="row" class="brags">1/17/18</div>
       <div layout="row" class="brags">1/16/18</div>
       <div layout="row" class="brags">1/15/18</div>
-      <div layout="row" class="brags">1/12/18</div> -->
+       -->
+       <div layout="row" class="brags">1/14/18</div>
       <div layout="row" class="brags">1/13/18</div>
       <div layout="row" class="brags">1/12/18</div>
       <div layout="row" class="brags">1/8/18</div>
@@ -92,9 +93,11 @@
       </div>
 
 
-      <div layout="row" class="brags2" ng-click="bc.goPost(12)">
-        Greek Tragedy: On Becoming Oneself
-      </div> -->
+    -->
+
+    <div layout="row" class="brags2" ng-click="bc.goPost(12)">
+      Greek Tragedy: On Becoming Oneself
+    </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(13)">
         Building Snake
       </div>
