--- a/views/templates/code.html
+++ b/views/templates/code.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="blogText">
-      First we'll need a grid. The code here is quite similar to what I used to build a <span class="linkage" ng-click="cc.goToPost(10)">Minesweeper</span> grid. Instead of adding a <span class="codeBit">button</span> to each <span class="codeBit">&lt;td></span>, we add a <span class="codeBit">div</span>. But just as before, we give it an <span class="codeBit">id</span> to keep track of its position and a class to color it blue.
+      First we'll need a grid. The code here is quite similar to what I used to build a <span class="linkage" ng-click="cc.goToPost(10)">Minesweeper</span> grid. Instead of adding a <span class="codeBit">&lt;button></span> to each <span class="codeBit">&lt;td></span>, we add a <span class="codeBit">&lt;div></span>. But just as before, we give it an <span class="codeBit">id</span> to keep track of its position and a class to color it blue.
     </div>
 
     <div class="blogText">
@@ -243,6 +243,10 @@
               }
             });
         }</code></pre>
+
+        <div class="blogText">
+          Notice that we have to store each opened 0-cell in a <span class="codeBit">newNeighbors</span> array, and check whether the array already includes a cell before <span class="codeBit">push</span>ing it. This ensures that our program doesn't enter an infinite loop, finding all of a cell's 0-neighbors that have already been opened.
+        </div>
 
       <li class="blogText">Finally, we'll want to add in right-click functionality for flagging spaces suspected to contain bombs. When the user opens up every square that doesn't contain a bomb, they win!</li>
     </ol>
@@ -676,46 +680,42 @@
       The following code will add a falling square and a static circle to the canvas. To start off, we can add a few abbreviations to save some time later on:
     </div>
 
-    <pre><code layout layout-align="center center">var Engine = Matter.Engine;
+    <pre><code layout layout-align="center center">    var Engine = Matter.Engine;
     var World = Matter.World;
-    var Bodies = Matter.Bodies;
-    </code></pre>
+    var Bodies = Matter.Bodies;</code></pre>
 
     <div class="blogText">
      Then we can add a few bodies ...
     </div>
 
-    <pre><code layout layout-align="center center">var box1 = Bodies.rectangle(200, 100, 20, 20);
-    var omega = Bodies.circle(500, 500, 100, {isStatic: true});
-    </code></pre>
+    <pre><code layout layout-align="center center">    var box1 = Bodies.rectangle(200, 100, 20, 20);
+    var omega = Bodies.circle(500, 500, 100, {isStatic: true});</code></pre>
 
     <div class="blogText">
       The last (optional) argument passed to the shape constructor is an <span class="codeBit">options</span> object. Setting <span class="codeBit">isStatic</span> to 'true' makes the body immobile; if we set <span class="codeBit">isSensor</span> to 'true', the body won't participate in any collisions.
     </div>
+
     <div class="blogText">
       But we mustn't forget to <span class="codeBit">add</span> the bodies to our <span class="codeBit">world</span>! p5.js asks for two things: a <span class="codeBit">setup</span> function to tell it how to render the initial page, and a <span class="codeBit">draw</span> function to tell it how to update the canvas as time goes on:
     </div>
 
-    <pre><code layout layout-align="center center">function setup() {
+    <pre><code layout layout-align="center center">    function setup() {
       var canvas = createCanvas(1000,1000);
       var engine = Engine.create();
       var world = engine.world;
       World.add(world, [box1, omega]);
       Engine.run(engine);
-    }
-    </code></pre>
+    }</code></pre>
 
     <div class="blogText">
       After we create our engine and our world, and start our engine, we're ready to draw:
-
     </div>
 
-    <pre><code layout layout-align="center center">function draw() {
+    <pre><code layout layout-align="center center">    function draw() {
       background(251);
       rect(box1.position.x, box1.position.y, 20, 20);
       ellipse(omega.position.x, omega.position.y, 200);
-    }
-    </code></pre>
+    }</code></pre>
 
     <div class="blogText">
       We reset the background with every iteration of the <span class="codeBit">draw</span> function in order to clear the previous renderings &mdash; otherwise we end up with space-time worms roaming through our canvas.
@@ -731,17 +731,17 @@
 
     <div class="blogText">
       And p5 is no slouch. It offers <span class="codeBit">mouseClicked</span> and <span class="codeBit">mouseDragged</span> functions that make it easy to interact with the canvas. If you add an array to your global scope...</div>
-      <pre><code layout layout-align="center center">var balls = [];</code></pre>
 
+      <pre><code layout layout-align="center center">var balls = [];</code></pre>
 
       <div class="blogText">...and then add a loop into your <span class="codeBit">draw</span> function...:
     </div>
-    <pre><code layout layout-align="center center" id="hardCode">{{cc.hardText}}
-    </code></pre>
+
+    <pre><code layout layout-align="center center" id="hardCode">{{cc.hardText}}</code></pre>
 
       <div class="blogText">...then finally, you can add a <span class="codeBit">mouseDragged</span> function like so:
       </div>
-      <pre><code layout layout-align="center center">function mouseDragged() {
+      <pre><code layout layout-align="center center">   function mouseDragged() {
         var randomNum = Math.random()*50;
         var ball = Bodies.circle(mouseX, mouseY, randomNum);
         ball.circleRadius = randomNum/2;
