--- a/views/templates/math.html
+++ b/views/templates/math.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="blogText">
-      This is seriously incredible. I've noodled with the idea of drawing the triangles recursively, but that was harder than I anticipated. It is truly amazing that such a seemingly-arbitrary process could generate such <i>order</i>. The algorithm can generate a variety of fractals, each possessing the wonderful property that each of its parts is similar to &mdash; really, is the <i>same</i> as &mdash; the whole.
+      This is seriously incredible. I've noodled with the idea of drawing the triangles recursively, but that proved harder than I anticipated. It is truly amazing that such a seemingly-arbitrary process could generate such <i>order</i>. The algorithm can generate a variety of fractals, each possessing the wonderful property that each of its parts is similar to &mdash; really, is the <i>same</i> as &mdash; the whole.
     </div>
 
     <div class="blogText">
@@ -87,7 +87,7 @@
 </div>
 
 <div class="blogText">
-  What happens when we double the length of a side on our Sierpinski triangle? Compare one of the three first-level triangles with the whole triangle. The whole has sides with double the length of each first-level triangle's side. So we have a <i>threefold</i> increase in size when we double the side's length. If the fractal were 2-dimensional, we would expect a fourfold increase, and if it were 1-dimensional, we would expect a twofold increase.
+  What happens when we double the length of a side on our Sierpinski triangle? Notice that the whole triangle has sides with double the length of each first-level triangle's side. So, because there are three first-level triangles, we have a <i>threefold</i> increase in size when we double the side-length. If the fractal were 2-dimensional, we would expect a fourfold increase, and if it were 1-dimensional, we would expect a twofold increase.
 </div>
 
 <div class="blogText">
