--- a/views/templates/other.html
+++ b/views/templates/other.html
@@ -45,9 +45,9 @@
 
 
   <div class="blogContent" layout="column" flex="60">
+<!--
 
-
-    <!-- <hr>
+    <hr>
 
         <div layout="column" layout-align="center center" id="post22">
           <div >
@@ -115,7 +115,7 @@
     </div>
 
     <div class="blogText">
-      Indeed, beauty "dazzles." It combines a "smile" with a "dark center," a felt brilliance with an unknown head. The experience of beauty demands to be recorded, and yet with proportionate intensity it refuses to be ensnared, trapped on the page or in the mind. It has a quality of <i>aliveness</i>; indeed, it "glisten[s] like a wild beast's fur."
+      Indeed, beauty "dazzles" and transfixes us. It combines a "smile" with a "dark center," a felt brilliance with an unknown head. The experience of beauty demands to be recorded, and yet with proportionate intensity it refuses to be ensnared, trapped on the page or in the mind. It has a quality of <i>aliveness</i>; indeed, it "glisten[s] like a wild beast's fur."
     </div>
 
     <div class="blogText">
@@ -125,7 +125,7 @@
     <div class="blogText">
       &alpha;&iota;&sigma;&theta;&eta;&sigma;&iota;&sigmaf;
     </div>
-
+ -->
 
 
         <hr>
@@ -135,25 +135,69 @@
                 <h2 class="blogTitle">Greek Tragedy: On Becoming Oneself</h2>
               </div>
               <div class="blogSubtitle">
-                Jan. 10, 2018
+                Jan. 14, 2018
               </div>
             </div>
 
         <div class="blogText">
-          Greek tragedy is like pop culture: both are living documents, both are always relevant. The difference is that 'pop culture' is alive and relevant because it's indexed to time &mdash; we feel entitled to ask, "The 'pop' of <i>when</i>?". Greek tragedy, on the other hand, breathes because of its depth of concern, its intensity of feeling. We feel unsure how to classify a Greek tragedy because its web is so far-reaching.
+          Greek tragedy is like pop culture: both are ever-relevant living documents. The difference is that 'pop culture' is alive and relevant because it's indexed to time &mdash; we feel entitled to ask, "The 'pop' of <i>when</i>?". Greek tragedy, on the other hand, affects us with its depth of concern, its intensity of feeling, its sheer power to <i>endure</i> through time.
         </div>
 
         <div class="blogText">
-          Each tragedy has many themes, employs various characters, develops its own plot. But I see two main barriers to accessing the meaning of a tragedy. The first is the temptation to zoom too far out &mdash; e.g. trying to understand all of an author's works under a single umbrella. The other danger is zooming in too close, severing a tragedy from its context.
+          Two of my favorite tragedies are Euripides' <i>Bacchae</i> and Sophocles' <i>Oedipus Rex</i>. Both focus on self-knowledge: the barriers to it, and the dangers and benefits that accompany its (gradual) attainment. Both (like many tragedies) deal with questions of fate, agency, and the desire to know oneself.
         </div>
 
         <div class="blogText">
-          It's probably better to get into an example. A few of my favorite tragedies are the <i>Bacchae</i> and <i>Oedipus Rex</i>. I hope that without brkaceting these guys, or while bracketing these guys, i'll be able to draw connections betwen them  All this being said, I think it's reasonable to seek some kind of meaning &mdash; even if we don't expect it to be objective, stable, certain &mdash; in that middle area between super-particularity and over-abstraction.
+          <i>Oedipus</i> provides the clearer example. When he's born, Oedipus (<i>spoiler alert!</i>) is prophesized to marry his mother and kill his father. Upon hearing the prophecy, his father (Laius, king of Thebes) wants to eliminate Oedipus; but his mother, warm-hearted, entrusts the baby to a Theban shepherd.
         </div>
 
         <div class="blogText">
-          It's probably better to just dive into an example of what I mean. Two of my favorite tragedies are Euripides' <i>Bacchae</i> and Sophocles' <i>Oedipus Rex</i>.
-        </div> -->
+          Oedipus grows up in another city. At one point he hears of the prophecy. Horrified at the idea of fulfilling it, he abandons the home of the people he takes to be his parents. Long story short, in his effort to avoid the prophecy, Oedipus ends up fulfilling it. On learning the truth, he blinds himself.
+        </div>
+
+        <div class="blogText">
+          The play takes the form of a detective story, in which Oedipus (current king of Thebes) searches for his father's murderer &mdash; which turns out to be himself. Many other characters &mdash; his mother/wife Jocasta, the shepherd who cared for him as a baby &mdash; try to dissuade Oedipus from discovering the truth, but he is relentless.
+        </div>
+
+        <div class="blogText">
+          Why should such a courageous pursuit of his own origin result in Oedipus's self-blinding? Why should his desire to see lead to his self-imposed darkness?
+        </div>
+
+        <div class="blogText">
+          To answer this, we have to consider Sophocles' larger arc for Oedipus. In the sequel, <i>Oedipus at Colonus</i>, Oedipus (aided by his daughter Antigone) achieves a kind of salvation. He gains the freedom to decide the fate of his traitorous sons; he attains an almost-divine status by the play's conclusion.
+        </div>
+
+        <div class="blogText">
+          Before he could arrive at this humbled state, Oedipus had to endure the pain of learning about his origins, his identity. But still, it's strange that Oedipus' submission to Fate &mdash; blinding himself in order to escape its power &mdash; turns out to be a necessary condition for exercising real agency.
+        </div>
+
+        <div class="blogText">
+          Turning to the <i>Bacchae</i> might provide an angle onto this question, of why fate and freedom are so inextricably bound together in Oedipus' case (and throughout Greek tragedy). This story also takes place in Thebes, many years earlier. Dionysus, or Bacchus, has returned to the city after recruiting a fleet of women (from the East) to exact revenge for his mother's exile. She was exiled for claiming her child was a god (a child of Zeus); so naturally, Dionysus' goal is to prove his divine power.
+        </div>
+
+        <div class="blogText">
+          Enter King Pentheus, whose combination of inexperience and arrogance perfectly encapsulates youth. He stands for order, adherence to social norms, imprisonment, consistency. The central clash of the play is between Pentheus and Dionysus, who is impersonating a priest (of Dionysus).
+        </div>
+
+        <div class="blogText">
+          Dionysus is cited as god of many things: wine, revelry, revelation, masks, forgetting, oblivion. One way of understanding Dionysus' <i>divinity</i> is that we cannot understand human nature without accounting for <i>Dionysian</i> forces, influences, traits. Pentheus initially rejects these elements of humanity, but ultimately proves to be voyeuristically curious.
+        </div>
+
+        <div class="blogText">
+          At one point, after warning Pentheus not to bind him, Dionysus analyzes Pentheus: "You do not know why you live, or what you are doing, or who you are" (505). This is pretty much borne out: Pentheus is destroyed by his unwillingness to accept or acknowledge certain psychic forces. Seen in a certain light, it is Pentheus' ignorance of himself, of what makes him a human, that catalyzes his demise.
+        </div>
+
+        <div class="blogText">
+          This prompts a preliminary answer to our question about Oedipus. He must paradoxically acknowledge his fate before he's freed, must see himself as he is before moving forward authentically in the world.
+        </div>
+
+        <div class="blogText">
+          This seems paradoxical because we think of a self (or at least I do) as a function from situation to behavior. If your self is fixed, then given a certain input situation you'll return the expected output behavior. And yet, it's Pentheus' unwillingness to acknowledge certain things about his nature that results in his destruction, and it's Oedipus' acknowledgement of those things that allows for his freedom and ultimate salvation.
+        </div>
+
+        <div class="blogText">
+          I guess the takeaway here is that it's a mistake to think that reflecting on our personal history and nature will only serve to restrict our action. Rather than imposing constraints on our behavior, it turns out that reflecting on, engaging with and ultimately accepting certain facts about ourselves will enlarge and enrich our freedom to engage with the world.
+        </div>
 
 
 <hr>
@@ -202,7 +246,7 @@
     <ul class="postlist">
 
       <!-- <li ng-click="oc.goToPost(22)">Descartes' Demon</li> -->
-      <!-- <li ng-click="oc.goToPost(22)">Greek Tragedy: On Becoming Oneself</li> -->
+      <li ng-click="oc.goToPost(22)">Greek Tragedy: On Becoming Oneself</li>
       <li ng-click="oc.goToPost(21)">Self-Conception as Carapace</li>
 
     </ul>
