--- a/views/templates/about.html
+++ b/views/templates/about.html
@@ -68,8 +68,67 @@
             </p>
 
             <p>
+              Lately, I've been diving into the exciting world of Unity, which has prompted me to get started with C#. I'm also learning Django in order to begin flexing my Python muscles. Python will help me continue to explore the fascinating realm of neural networks and machine learning.
+            </p>
+
+            <p>
               Feel free to reach out to me about anything! I'm eagerly seeking new software development opportunities.
             </p>
+          </div>
+
+
+        </div>
+
+<br>
+
+<span class="PortHeader">Skills</span>
+<br>
+<br>
+
+        <div layout="row">
+          <div layout="column" layout-align="center center" class="skills">
+            <b class="skillTitle">Core Stack:</b>
+            <ul>
+              <li>JavaScript</li>
+              <li>Node.js</li>
+              <li>Express.js</li>
+              <li>AngularJS</li>
+              <li>AJAX</li>
+              <li>ES6</li>
+            </ul>
+          </div>
+          <div layout="column" layout-align="center center" class="skills">
+            <b class="skillTitle">Back-End:</b>
+            <ul>
+              <li>Python</li>
+              <li>PHP</li>
+              <li>PostgreSQL</li>
+              <li>MySQL</li>
+              <li>MongoDB</li>
+              <li>Neural Nets</li>
+            </ul>
+          </div>
+          <div layout="column" layout-align="center center" class="skills">
+            <b class="skillTitle">Front-End:</b>
+            <ul>
+              <li>HTML5</li>
+              <li>CSS3</li>
+              <li>Bootstrap</li>
+              <li>p5.js</li>
+              <li>jQuery</li>
+              <li>Angular Material</li>
+            </ul>
+          </div>
+          <div layout="column" layout-align="center center" class="skills">
+            <b class="skillTitle">Games, etc.:</b>
+            <ul>
+              <li>Matter.js</li>
+              <li>Unity (C#)</li>
+              <li>Git</li>
+              <li>Unit Testing</li>
+              <li>Moment.js</li>
+              <li>APIs</li>
+            </ul>
           </div>
         </div>
 
