--- a/views/templates/code.html
+++ b/views/templates/code.html
@@ -883,7 +883,7 @@
   </div>
 
   <div class="prevPosts" layout="column" flex="12">
-    <div class="allposts" layout layout-align="center center">All Posts:</div>
+    <div class="allposts" layout layout-align="center center">Code Posts:</div>
     <ul class="postlist">
       <li ng-click="cc.goToPost(11)">Building Snake</li>
       <li ng-click="cc.goToPost(10)">Building Minesweeper</li>
