--- a/views/templates/math.html
+++ b/views/templates/math.html
@@ -449,7 +449,7 @@
   </div>
 
   <div class="prevPosts" layout="column" flex="12">
-    <div class="allposts" layout layout-align="center center">All Posts:</div>
+    <div class="allposts" layout layout-align="center center">Math Posts:</div>
     <ul class="postlist">
       <!-- <li ng-click="mc.goToPost(10)">Building Minesweeper</li> -->
       <li ng-click="mc.goToPost(9)">Drawing the Sierpinski Triangle</li>
