--- a/views/templates/other.html
+++ b/views/templates/other.html
@@ -45,8 +45,8 @@
 
 
   <div class="blogContent" layout="column" flex="60">
-<!--
 
+<!--
     <hr>
 
         <div layout="column" layout-align="center center" id="post22">
@@ -68,21 +68,21 @@
 
     <div class="blogText">
       While it's of course true that the declarations of science have a different standing than the Evil Demon God hypothesis, it isn't at at clear that this difference amounts to the latter failing to provide some <i>certain guarantee</i> that the former offers.
-    </div>
+    </div> -->
 
     <hr>
 
-        <div layout="column" layout-align="center center" id="post22">
+        <div layout="column" layout-align="center center" id="post23">
           <div >
             <h2 class="blogTitle">Rilke's <i>Archaic Torso of Apollo</i></h2>
           </div>
           <div class="blogSubtitle">
-            Jan. 10, 2018
+            Jan. 15, 2018
           </div>
         </div>
 
     <div class="blogText">
-      Recently I had the pleasure of playing the role of the Table Topics speaker at our weekly Toastmasters meeting. For our topic I chose the idea of beauty.
+      I recently had the pleasure of playing the role of the Table Topics speaker at our weekly Toastmasters meeting. For our topic I chose the idea of beauty.
     </div>
 
     <div class="blogText">
@@ -115,17 +115,24 @@
     </div>
 
     <div class="blogText">
-      Indeed, beauty "dazzles" and transfixes us. It combines a "smile" with a "dark center," a felt brilliance with an unknown head. The experience of beauty demands to be recorded, and yet with proportionate intensity it refuses to be ensnared, trapped on the page or in the mind. It has a quality of <i>aliveness</i>; indeed, it "glisten[s] like a wild beast's fur."
+      Indeed, beauty "dazzles" and transfixes us. It combines an inviting smile with a retreating dark center, a felt brilliance with a displaced and unknown head. The experience of beauty demands to be recorded, and yet with equal intensity it refuses to be ensnared, trapped on the page or in the mind. It has a quality of <i>aliveness</i>; it "glisten[s] like a wild beast's fur."
     </div>
 
     <div class="blogText">
-      Another aspect of beauty that I think Rilke captures is its relation to the ethical dimension of life. The imperative that concludes the poem arrives abruptly, and yet we feel somehow prepared for it. Much of the conclusion's force can be traced to the way in which the earlier aesthetic musings pry open a certain emotional part of the reader, preparing her for contact with the ethical dimension.
+      Beauty invites us to <i>see</i>, but also stimulates us to try to see ourselves seeing. It compels us to reflect on why we are so moved, to try and catch ourselves in the moment of rapt attention and pin that moment to our corkboard, like a preserved butterfly. Beauty is powerful, and we feel impelled to investigate the sources of its power. We are pushed into a kind of sine wave between wanting to see, to inhale the beauty, and wanting to understand why it moves us.
     </div>
 
     <div class="blogText">
-      &alpha;&iota;&sigma;&theta;&eta;&sigma;&iota;&sigmaf;
+      This idea calls to mind the etymology of 'aesthetics'. Beauty is tethered to what the Greeks called &alpha;&iota;&sigma;&theta;&eta;&sigma;&iota;&sigmaf; (<i>aistheisis</i>), or sense-perception. We're tempted to think of beauty as living only on the emotional side of the mind/passions dichotomy. But can we really understand the idea of beauty without accounting for the intellectual experience, the quest to understand and organize, occasioned by a feeling of beauty?
     </div>
- -->
+
+    <div class="blogText">
+      Rilke cashes out the interplay between the intellectual and emotional/perceptual aspects of beauty in ethical terms. The imperative that concludes the poem arrives abruptly, and yet we feel somehow prepared for it. Much of the conclusion's force can be traced to the way in which the earlier aesthetic musings manage to pry open a certain emotional part of the reader, preparing her for contact with the ethical dimension.
+    </div>
+
+    <div class="blogText">
+    </div>
+
 
 
         <hr>
@@ -168,9 +175,13 @@
         </div>
 
         <div class="blogText">
-          Before he could arrive at this humbled state, Oedipus had to endure the pain of learning about his origins, his identity. But still, it's strange that Oedipus' submission to Fate &mdash; blinding himself in order to escape its power &mdash; turns out to be a necessary condition for exercising real agency.
+          Before he could arrive at this humbled state, Oedipus had to endure the pain of learning about his origins, his identity. But still, it's strange that Oedipus' submission to Fate &mdash; blinding himself in order to escape its power &mdash; turns out to be a necessary condition for exercising real agency. This is the puzzle that interests me.
         </div>
-
+<br>
+        <div layout layout-align="center center">
+          <b>*&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;*&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;*</b>
+        </div>
+<br>
         <div class="blogText">
           Turning to the <i>Bacchae</i> might provide an angle onto this question, of why fate and freedom are so inextricably bound together in Oedipus' case (and throughout Greek tragedy). This story also takes place in Thebes, many years earlier. Dionysus, or Bacchus, has returned to the city after recruiting a fleet of women (from the East) to exact revenge for his mother's exile. She was exiled for claiming her child was a god (a child of Zeus); so naturally, Dionysus' goal is to prove his divine power.
         </div>
@@ -192,11 +203,15 @@
         </div>
 
         <div class="blogText">
-          This seems paradoxical because we think of a self (or at least I do) as a function from situation to behavior. If your self is fixed, then given a certain input situation you'll return the expected output behavior. And yet, it's Pentheus' unwillingness to acknowledge certain things about his nature that results in his destruction, and it's Oedipus' acknowledgement of those things that allows for his freedom and ultimate salvation.
+          This seems paradoxical because we find it natural (or at least I do) to think of a self as a function from situation to behavior. If your self is fixed, then given a certain input situation you'll return the expected output behavior. If someone knew all the facts about you and your situation, they could deduce what action you would take. And yet, it's Pentheus' unwillingness to acknowledge certain things about his nature that results in his destruction, and it's Oedipus' acknowledgement of those things that allows for his freedom and ultimate salvation.
         </div>
 
         <div class="blogText">
           I guess the takeaway here is that it's a mistake to think that reflecting on our personal history and nature will only serve to restrict our action. Rather than imposing constraints on our behavior, it turns out that reflecting on, engaging with and ultimately accepting certain facts about ourselves will enlarge and enrich our freedom to engage with the world.
+        </div>
+
+        <div class="blogText">
+          It feels appropriate to conclude with a Spinoza quote: "The more clearly you understand yourself and your emotions, the more you become a lover of what is."
         </div>
 
 
@@ -242,10 +257,10 @@
   </div>
 
   <div class="prevPosts" layout="column" flex="12">
-    <div class="allposts" layout layout-align="center center">All Posts:</div>
+    <div class="allposts" layout layout-align="center center">Other Posts:</div>
     <ul class="postlist">
 
-      <!-- <li ng-click="oc.goToPost(22)">Descartes' Demon</li> -->
+      <li ng-click="oc.goToPost(23)">Rilke's <i>Archaic Torso of Apollo</i></li>
       <li ng-click="oc.goToPost(22)">Greek Tragedy: On Becoming Oneself</li>
       <li ng-click="oc.goToPost(21)">Self-Conception as Carapace</li>
 
