--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -67,8 +67,8 @@
       <!-- <div layout="row" class="brags">1/17/18</div>
       <div layout="row" class="brags">1/16/18</div>
        -->
-       <div layout="row" class="brags">1/15/18</div>
-       <div layout="row" class="brags">1/14/18</div>
+      <div layout="row" class="brags">1/15/18</div>
+      <div layout="row" class="brags">1/14/18</div>
       <div layout="row" class="brags">1/13/18</div>
       <div layout="row" class="brags">1/12/18</div>
       <div layout="row" class="brags">1/8/18</div>
@@ -93,49 +93,49 @@
 
     -->
     <div layout="row" class="brags2" ng-click="bc.goPost(15)">
-      Rilke's&ensp;<i>Archaic Torso of Apollo</i>
+      Rilke's&ensp;<i>Archaic Torso of Apollo</i>&emsp;<span class="tag tagO" ng-click="bc.goOther()">Other</span>
     </div>
     <div layout="row" class="brags2" ng-click="bc.goPost(12)">
-      Greek Tragedy: On Becoming Oneself
+      Greek Tragedy: On Becoming Oneself&emsp;<span class="tag tagO" ng-click="bc.goOther()">Other</span>
     </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(13)">
-        Building Snake
+        Building Snake&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(14)">
-        Drawing The Sierpinski Triangle
+        Drawing The Sierpinski Triangle&emsp;<span class="tag tagM" ng-click="bc.goMath()">Math</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(11)">
-        Self-Conception as Carapace
+        Self-Conception as Carapace&emsp;<span class="tag tagO" ng-click="bc.goOther()">Other</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(10)">
-        Building Minesweeper
+        Building Minesweeper&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(9)">
-        Creating a Customizable Chart
+        Creating a Customizable Chart&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(8)">
-        Binary Counting and the Towers of Hanoi
+        Binary Counting and the Towers of Hanoi&emsp;<span class="tag tagM" ng-click="bc.goMath()">Math</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(7)">
-        Sizes of Infinite Sets
+        Sizes of Infinite Sets&emsp;<span class="tag tagM" ng-click="bc.goMath()">Math</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(6)">
-        From JavaScript to Python: Basic Syntax
+        From JavaScript to Python: Basic Syntax&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(5)">
-        Exploring the Golden Ratio
+        Exploring the Golden Ratio&emsp;<span class="tag tagM" ng-click="bc.goMath()">Math</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(4)">
-        Writing SQL Queries
+        Writing SQL Queries&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(3)">
-        Getting Started with Matter.js
+        Getting Started with Matter.js&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(2)">
-        More Canvas: Fun with Conic Sections
+        More Canvas: Fun with Conic Sections&emsp;<span class="tag tagM" ng-click="bc.goMath()">Math</span>
       </div>
       <div layout="row" class="brags2" ng-click="bc.goPost(1)">
-        Getting Started with HTML Canvas Animations
+        Getting Started with HTML Canvas Animations&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
       </div>
     <!-- </div> -->
     <!-- <li>Building Minesweeper</li>
