added icon for resume

--- a/views/templates/about.html
+++ b/views/templates/about.html
@@ -168,7 +168,7 @@
             </div>
 
             <div layout="row" class="emailCont" layout layout-align="center center">
-              <a class="linkTextAbout" href="styles/resume_zs_development.pdf"><span>My Resume</span></a>
+              <img class="icon" src="styles/resume_icon.png"> &emsp; <a class="linkTextAbout" href="styles/resume_stout_dev.pdf"><span>My Resume</span></a>
             </div>
 
             <!-- </div> -->
